<resources>
    <string name="app_name">Drawing With Android</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_my_view_object">My View Object Activity</string>
    <string name="home">Home</string>
    <string name="my_view_object">My View Object</string>
    <string name="move_right">Move Right</string>
    <string name="move_left">Move Left</string>
    <string name="move_up">Move Up</string>
    <string name="move_down">Move Down</string>
    <string name="my_picture">My picture</string>
    <string name="title_activity_my_canvas">My Canvas Activity</string>
    <string name="my_canvas">My canvas activity</string>
    <string name="title_activity_my_ball">My Ball Activity</string>
    <string name="my_ball">My ball activity</string>
    <string name="title_activity_my_ball_and_palette">MyBallAndPaletteActivity</string>
    <string name="my_ball_and_palette">My ball and palette</string>

</resources>
