<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MyViewObjectActivity"
    tools:showIn="@layout/activity_my_view_object">

    <RelativeLayout
        android:id="@+id/myBase"
        android:layout_width="367dp"
        android:layout_height="578dp"
        android:background="@layout/border_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.615"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:context=".MainActivity">

        <ImageView
            android:id="@+id/myImageView"
            android:layout_width="100px"
            android:layout_height="100px"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="125dp"
            android:layout_marginTop="202dp"
            android:contentDescription="@string/my_picture"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.122"
            app:srcCompat="@mipmap/ic_launcher" />
    </RelativeLayout>

    <Button
        android:id="@+id/moveDown"
        android:layout_width="78dp"
        android:layout_height="59dp"
        android:onClick="moveDown"
        android:text="@string/move_down"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.704"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.938" />

    <Button
        android:id="@+id/moveLeft"
        android:layout_width="83dp"
        android:layout_height="59dp"
        android:onClick="moveLeft"
        android:text="@string/move_left"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.326"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.935" />

    <Button
        android:id="@+id/moveUp"
        android:layout_width="77dp"
        android:layout_height="57dp"
        android:onClick="moveUp"
        android:text="@string/move_up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.952"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.936" />

    <Button
        android:id="@+id/moveRight"
        android:layout_width="85dp"
        android:layout_height="58dp"
        android:onClick="moveRight"
        android:text="@string/move_right"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.027"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.938" />

</android.support.constraint.ConstraintLayout>